--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>StickWorld</title>
+    <link rel="stylesheet" href="/static/style.css">
+</head>
+<body>
+    <h1>StickWorld Prototype</h1>
+    <p>Este es el proto de Railway.</p>
 
+    <div class="stickman">
+        <div class="head"></div>
+        <div class="body"></div>
+        <div class="legs"></div>
+    </div>
+
+</body>
+</html>
